<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".StartMenu">

    <!-- MapView -->
    <com.esri.android.map.MapView
        android:id="@+id/map"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        mapoptions.MapType="Topo"
        mapoptions.center="47.38, 8.54"
        mapoptions.ZoomLevel="17"
        android:layout_above="@+id/kartenButton"
        android:layout_marginBottom = "5dip"/>

    <!--Karten button -->
    <Button
        android:text="@string/buttonKarten"
        android:textColor="#808080"
        android:id="@+id/kartenButton"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:drawableTop="@drawable/symbol_map"
        android:background="@android:color/transparent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true" />

    <!--Ebenen button -->
    <Button
        android:text="@string/buttonEbenen"
        android:textColor="#808080"
        android:id="@+id/ebenenButton"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/kartenButton"
        android:drawableTop="@drawable/symbol_layers"
        android:background="@android:color/transparent"/>

    <!--Filter button -->
    <Button
        android:text="@string/buttonFilter"
        android:textColor="#808080"
        android:id="@+id/filterButton"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/ebenenButton"
        android:drawableTop="@drawable/symbol_filter"
        android:background="@android:color/transparent"/>

    <!--Touren button -->
    <Button
        android:text="@string/buttonTouren"
        android:textColor="#808080"
        android:id="@+id/tourenButton"
        android:layout_width="80dip"
        android:layout_height="80dip"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/filterButton"
        android:focusableInTouchMode="false"
        android:drawableTop="@drawable/symbol_tours"
        android:background="@android:color/transparent"/>

    <!--Stop tour button -->
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonStopTour"
        android:textColor="#808080"
        android:id="@+id/stopTourButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:visibility="invisible"/>

    <!--Stop route button -->
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonStopRoute"
        android:textColor="#808080"
        android:id="@+id/stopRouteButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:visibility="invisible"/>

    <!--Radio group of the radio buttons for the base maps -->
    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id = "@+id/kartenOption"
        android:layout_above="@+id/kartenButton"
        android:background="#ffeeeeee"
        android:visibility="invisible">

        <!--Radio button for the current base maps -->
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioAktuell"
            android:id="@+id/radioAktuell"
            android:onClick="onRadioButtonClicked"
            android:checked="true"
            android:textColor="#808080"/>

        <!--Radio button for the base maps from 1970 -->
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio1970"
            android:id="@+id/radio1970"
            android:onClick="onRadioButtonClicked"
            android:textColor="#808080"/>

        <!--Radio button for the base maps from 1900 -->
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio1900"
            android:id="@+id/radio1900"
            android:onClick="onRadioButtonClicked"
            android:textColor="#808080"/>

        <!--Radio button for the base maps from 1860 -->
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio1860"
            android:id="@+id/radio1860"
            android:onClick="onRadioButtonClicked"
            android:textColor="#808080"/>

        <!--Radio button for the base maps from 1793 -->
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio1793"
            android:id="@+id/radio1793"
            android:onClick="onRadioButtonClicked"
            android:textColor="#808080"/>
    </RadioGroup>

    <!--Linear layout for the check boxes -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/kartenButton"
        android:id="@+id/ebenenOption"
        android:background="#ffeeeeee"
        android:visibility="invisible">

        <!--Check box for the layer Denkmalpflege -->
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkDenkm"
            android:id="@+id/checkDenkm"
            android:onClick="onCheckBoxClicked"
            android:textColor="#808080"/>

        <!--Check box for the layer Gartendenkmal -->
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkGarten"
            android:id="@+id/checkGarten"
            android:onClick="onCheckBoxClicked"
            android:textColor="#808080"/>

        <!--Check box for the layer Aussichtspunkte -->
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkAussicht"
            android:id="@+id/checkAussicht"
            android:onClick="onCheckBoxClicked"
            android:textColor="#808080"/>
    </LinearLayout>


</RelativeLayout>
