<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.gkonosc.gislab.tourenMenu">

    <!--Back button -->
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonBack"
        android:id="@+id/backButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:textColor="#808080"/>

    <!--Button for the tour of Innenstadt -->
    <ImageButton
        android:layout_width="142dp"
        android:layout_height="100dp"
        android:id="@+id/imageButton"
        android:src="@drawable/symbol_01_innenstadt"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/backButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <!--Button for the tour of Wiedikon -->
    <ImageButton
        android:layout_width="142dp"
        android:layout_height="100dp"
        android:id="@+id/imageButton2"
        android:src="@drawable/symbol_04_wiedikon"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/imageButton"
        android:layout_alignParentStart="true" />

    <!--Text for the tour of Innenstadt -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Tour_1_Description"
        android:id="@+id/textView"
        android:layout_alignBottom="@+id/imageButton"
        android:layout_alignEnd="@+id/backButton" />

    <!--Text for the tour of Wiedikon -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Tour_4_Description"
        android:id="@+id/textView2"
        android:layout_alignBottom="@+id/imageButton2"
        android:layout_alignStart="@+id/textView" />

</RelativeLayout>
